# serializer version: 1
# name: test_async_setup_entry[mock_request_status0-mocked-config-entry-id][device_MyUPS_XXXXXXXXXXXX]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': '928.a8 .D USB FW:a8',
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'apcupsd',
        'XXXXXXXXXXXX',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'APC',
    'model': 'Back-UPS ES 600',
    'model_id': None,
    'name': 'MyUPS',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': 'XXXXXXXXXXXX',
    'sw_version': '3.14.14 (31 May 2016) unknown',
    'via_device_id': None,
  })
# ---
# name: test_async_setup_entry[mock_request_status1-mocked-config-entry-id][device_APC UPS_XXXX]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'apcupsd',
        'XXXX',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'APC',
    'model': None,
    'model_id': None,
    'name': 'APC UPS',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': 'XXXX',
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_async_setup_entry[mock_request_status2-mocked-config-entry-id][device_APC UPS_<no serial>]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'apcupsd',
        'mocked-config-entry-id',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'APC',
    'model': None,
    'model_id': None,
    'name': 'APC UPS',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_async_setup_entry[mock_request_status3-mocked-config-entry-id][device_APC UPS_Blank]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'apcupsd',
        'mocked-config-entry-id',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': 'APC',
    'model': None,
    'model_id': None,
    'name': 'APC UPS',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
